# multiwebcam

./: .gitignore  README.md  pyproject.toml
dev/: demo.py  dev_recorder.py
multiwebcam/: __init__.py  __main__.py  configurator.py  helper.py  interface.py  logger.py
multiwebcam/cameras/: camera.py  live_stream.py  synchronizer.py
multiwebcam/gui/: camera_config_dialogue.py  frame_dictionary_emitter.py  frame_emitter.py  log_widget.py  main_widget.py  multicamera_widget.py  perf_counter_widget.py  single_camera_widget.py  synched_frames_display.py  workspace_widget.py
multiwebcam/gui/camera_management/: camera_display_widget.py  multiplayback_widget.py  playback_widget.py
multiwebcam/recording/: multi_video_recorder.py  recorded_stream.py  single_video_recorder.py  video_recorder.py
multiwebcam/session/: session.py
